# markdown

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  PROGRESS_REPORT.md  Package.swift  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.web.ts
.aishore/: README.md  aishore  config.yaml
.aishore/agents/: architect.md  developer.md  product-owner.md  tech-lead.md  validator.md
.github/workflows/: baseline-capture.yml  build.yml
Sources/EMAI/: AIProvider.swift  AIProviderManager.swift  ApplePlatformAIProvider.swift  CloudAPIProvider.swift  LocalModelProvider.swift  ModelDownloadManager.swift  ModelLoader.swift  ModelStorageManager.swift  NetworkMonitor.swift  SummarizePromptTemplate.swift  SummarizeService.swift
Sources/EMApp/: EasyMarkdownApp.swift  FileCreateCoordinator.swift  FileOpenCoordinator.swift  FirstRunCoordinator.swift
Sources/EMCore/: DeviceCapability.swift  Diagnostic.swift  EMError.swift  ErrorPresentation.swift  GraphemeClusterHelper.swift  HapticFeedback.swift  HapticStyle.swift  LayoutMetrics.swift  PlatformTypes.swift  SubscriptionStatusProviding.swift  SummarizeUpdate.swift  TextMutation.swift  Theme.swift  TypeScale.swift
Sources/EMDoctor/: DoctorEngine.swift
Sources/EMEditor/: DoctorCoordinator.swift  DoctorIndicatorView.swift  DocumentStatsCalculator.swift  EMTextView.swift  EditorState.swift  FloatingActionBar.swift  MarkdownRenderer.swift  SummarizeCoordinator.swift  SummaryPopoverContent.swift  SyntaxHighlighter.swift  TextViewBridge.swift  TextViewCoordinator.swift
Sources/EMFile/: AutoSaveManager.swift  FileCreateService.swift  FileOpenService.swift  MarkdownExtensions.swift  OpenFileRegistry.swift
Sources/EMFormatter/: FormattingEngine.swift  FormattingRule.swift  HeadingSpacingRule.swift  ListContinuationRule.swift  ListIndentRule.swift  TableNavigationRule.swift
Sources/EMParser/: MarkdownAST.swift  MarkdownFormatOptions.swift  MarkdownNode.swift  MarkdownParser.swift  ParseResult.swift  SourcePosition.swift
Sources/EMSettings/: SettingsManager.swift
Tests/EMAITests/: AIProviderManagerTests.swift  ApplePlatformAIProviderTests.swift  CloudAPIProviderTests.swift  LocalModelProviderTests.swift  ModelDownloadManagerTests.swift  ModelLoaderTests.swift  ModelStorageManagerTests.swift  NetworkMonitorTests.swift
Tests/EMAppTests/: AppRouterTests.swift  ErrorPresenterTests.swift  FirstRunCoordinatorTests.swift  RecentsManagerTests.swift
Tests/EMCoreTests/: DeviceCapabilityTests.swift  EMErrorTests.swift  ErrorPresentationTests.swift  GraphemeClusterHelperTests.swift  LayoutMetricsTests.swift  ThemeContrastTests.swift
Tests/EMDoctorTests/: DoctorEngineTests.swift
Tests/EMEditorTests/: DocumentStatsCalculatorTests.swift  EditorStateTests.swift  FloatingActionBarTests.swift  FormattingShortcutTests.swift  I18nTextTests.swift  MarkdownRendererTests.swift  SyntaxHighlighterTests.swift  TextMutationTests.swift
Tests/EMFileTests/: AutoSaveManagerTests.swift  FileCreateServiceTests.swift  FileOpenServiceTests.swift  MarkdownExtensionsTests.swift  OpenFileRegistryTests.swift
Tests/EMFormatterTests/: FormattingEngineTests.swift  FormattingPerformanceTests.swift  HeadingSpacingRuleTests.swift  ListContinuationRuleTests.swift  ListIndentRuleTests.swift  (+5 more)
apple/: README.md  project.yml
backlog/: DEFINITIONS.md  backlog.json  sprint.json
dist-web/: index.html  sw.js
docs/: ARCHITECTURE.md  CORE-API.md  IOS_BUILD_SPEC.md  PRODUCT.md  PRODUCT_LEGACY.md  baseline.json  commonmark_status.md  engine-comparison.json  engine-decision.md  large-file-performance.md  wasm-spike.md
em-core/: Cargo.toml
markdown-core/: Cargo.toml
markdown-core/src/: ai.rs  ast.rs  doctor.rs  ffi.rs  formatter.rs  lib.rs  math.rs  parser.rs  wasm_api.rs  watcher.rs  wikilinks.rs
markdown-core/tests/: audit_regressions.rs  commonmark.rs  commonmark_skip.json  corpus_smoke.rs  doctor_integration.rs  formatter.rs  integration_test.rs  large_file_perf.rs  parser.rs
public/: manifest.json
reference/: TreeSitterConversion.swift
scripts/: build-wasm.sh  measure_baseline.sh  wasm-node-smoke.mjs  wasm-shim-check.mjs
src/: ai.ts  completions.ts  core-wasm.ts  doctor.ts  editor.ts  file-system-access.d.ts  format.ts  index-web.html  index.html  main.ts  markdown-commands.ts  markdown-highlight.ts  preview.ts  read-mode.ts  rendered-decorations.ts  settings.ts  style.css  sw.ts  tauri-stub.ts  the-render.ts  themes.ts  wikilinks.ts  wordcount.ts  wysiwym.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+80 files in other folders)
