[package]
name = "markdown-core"
version = "0.1.0"
edition = "2021"

# rlib for the workspace (tests, measure bin); cdylib for the WebAssembly module
# (EPIC-WASM); staticlib for the Apple uniffi binding (EPIC-UNIFFI). One crate,
# three binding targets — ARCHITECTURE A-STACK-2 / §3.8.
[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
llama-cpp-2 = { version = "0.1.143", optional = true }
# Result serialization for the language bindings (WASM/uniffi buffer-out).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native-only deps. File watching has no WebAssembly equivalent, and uniffi (the
# Apple/Swift binding, EPIC-UNIFFI) is gated off wasm32 so it can't collide with
# the WASM cdylib binding — the two bindings stay isolated per target.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1"

[features]
default = []
ai = ["llama-cpp-2"]
# Gates the uniffi-bindgen helper binary so it (and clap) only build when asked.
uniffi-bin = []

# Swift-binding generator (library mode): reads metadata from the compiled
# staticlib, so generated Swift can never drift from the exported symbols.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-bin"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
