[package]
name = "markdown-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
markdown-core = { path = "../markdown-core", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
ai = ["markdown-core/ai", "dep:reqwest", "dep:keyring"]
